Implement score on submission (#25)
* feat: added score to submission repo

* fix: fixed get queries on submission because of score

* feat: add some neccessary method to contest user repo for scoreboard

* feat: added get final submission method

* ref: renamed GetTestresult in judge module

* fix: added contest id in submission

* feat: changed data we return on scoreboard. a little bit of refactor

* chore: removed a done todo comment

* fix: fixed get count on scoreboard api

* doc: updated swagger
