# doc/swagger/contests.yaml
@@ -41,6 +41,18 @@ paths:
               schema:
                 type: object
                 properties:
+                  problems:
+                    type: array
+                    description: problems of the contest (order matters since scores are in that order too
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        title:
+                          type: string
+                          example: A hard problem
                   count:
                     type: integer
                     example: 100
@@ -58,17 +70,11 @@ paths:
                         username:
                           type: string
                           example: "Ali"
-                        submissions:
+                        scores:
                           type: array
                           items:
-                            type: object
-                            properties:
-                              problem_id:
-                                type: integer
-                                example: 1
-                              score:
-                                type: integer
-                                example: 100
+                            type: integer
+                            example: 100
 
 
 
